--- a/src/app/pages/beginner/testess/testess.page.html
+++ b/src/app/pages/beginner/testess/testess.page.html
@@ -30,7 +30,7 @@
             </ion-card-header>
 
         </ion-card>
-        <ion-card href="text5">
+        <ion-card routerLink="/test-listening2">
             <ion-card-header>
                 <ion-card-title>Listening test 2</ion-card-title>
             </ion-card-header>
