--- a/src/app/pages/pre-intermediate/vocabulary-list/vocabulary-list.page.html
+++ b/src/app/pages/pre-intermediate/vocabulary-list/vocabulary-list.page.html
@@ -2,7 +2,7 @@
     <ion-header translucent>
         <ion-toolbar>
             <ion-buttons slot="start">
-                <ion-back-button defaultHref="beginner"></ion-back-button>
+                <ion-back-button defaultHref="pre-intermediate"></ion-back-button>
             </ion-buttons>
             <ion-title>Vocabulary Topics</ion-title>
         </ion-toolbar>
@@ -41,15 +41,15 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="expressingMovement">
-            <ion-grid href="expressingMovement">
+        <a href="confusing">
+            <ion-grid href="confusing">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/confusingverbs.jfif">
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>Confusing verbs</h4>
-                        <p>Total 11 words</p>
+                        <p>Total 22 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -57,8 +57,8 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
-            <ion-grid>
+        <a href="expressing-movement">
+            <ion-grid href="expressing-movement">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/expressingmovement.png">
@@ -73,47 +73,15 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/get.png">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Get</h4>
-                        <p>Total 21 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="things">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/verbforms.png">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Verbs forms</h4>
-                        <p>Total 25 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="adjective">
-            <ion-grid>
+        <a href="appearance">
+            <ion-grid href="appearance">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/describing.jfif">
                     </ion-col>
                     <ion-col size="7" class="text">
-                        <h4>Describing people</h4>
-                        <p>Total 17 words</p>
+                        <h4>Appearance</h4>
+                        <p>Total 8 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -121,15 +89,31 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
-            <ion-grid>
+        <a href="personality">
+            <ion-grid href="personality">
+                <ion-row>
+                    <ion-col size="4" class="img">
+                        <img src="/assets/img/describing.jfif">
+                    </ion-col>
+                    <ion-col size="7" class="text">
+                        <h4>Personality</h4>
+                        <p>Total 8 words</p>
+                    </ion-col>
+                    <ion-col size="1" class="seta">
+                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </a>
+        <a href="things-wear">
+            <ion-grid href="things-wear">
                 <ion-row>
                     <ion-col size="4" class="img">
                         <img src="/assets/img/thingswear.jfif">
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>Things you wear</h4>
-                        <p>Total x words</p>
+                        <p>Total 14 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
