--- a/src/app/pages/pre-intermediate/pre-intermediate.page.html
+++ b/src/app/pages/pre-intermediate/pre-intermediate.page.html
@@ -21,19 +21,15 @@
             <a href="upper-intermediate" class="btn btn-primary btn-lg btn-block" role="button" aria-disabled="false">Upper-intermediate level</a>
         </ion-content>
 
-        <ion-footer>
-            <ion-button (click)="logout()" color="primary" expand="block">
-                Logout
-            </ion-button>
-        </ion-footer>
+
     </ion-menu>
     <ion-router-outlet id="content1" main></ion-router-outlet>
 
     <ion-content class="background">
 
         <div class="top">
-            <h4>Pre-intermediate</h4>
-            <h4>Level</h4>
+            <h5>Pre-intermediate</h5>
+            <h5>Level</h5>
 
         </div>
 
@@ -58,7 +54,7 @@
                     <ion-icon name="volume-high" size="large"></ion-icon> <br> Listening II
                 </div>
             </ion-button>
-            <ion-button href="testess" color="light">
+            <ion-button href="tests2-list" color="light">
                 <div class="icon">
                     <ion-icon name="clipboard" size="large"></ion-icon> <br> Tests II
                 </div>
